<resources>
    <string name="app_name">SparthanMobile</string>
    <string name="connect_button_label">Connect</string>
    <string name="stream_button_label">STREAM</string>
    <string name="myo">myo</string>
    <string name="looking_for_myo">Looking for MYO</string>
    <string name="connecting">Connecting</string>
    <string name="streaming">Streaming</string>
    <string name="gesture_image">gesture image</string>
    <string name="stream">Stream</string>
    <string name="switch_label_text">Use cloud</string>
    <string name="SERVER_UNAVAILABLE">Server unavailable</string>
    <string name="settings_label">Settings</string>
    <string name="back_label">Back</string>
    <string name="classifiers_label">Classifiers</string>
    <string name="connectivity_label">Connectivity</string>
    <string name="number_of_gestures_label">Number of gestures:</string>
    <string name="button_manual_text">Manual</string>
    <string name="button_auto_text">Auto</string>
    <string name="udp">UDP</string>
    <string name="tcp">TCP</string>
    <string name="http">HTTP</string>
</resources>
