<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/classifiers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/classifiers_label"
            android:textColor="@color/colorMain"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/connectivity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="320dp"
            android:text="@string/connectivity_label"
            android:textColor="@color/colorMain"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="600dp"
            android:clickable="true">

            <ImageView
                android:id="@+id/back_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:clickable="true"
                android:src="@mipmap/back"
                android:tint="@color/colorInactive" />

            <TextView
                android:id="@+id/back_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/back_label"
                android:textColor="@color/colorInactive"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>